--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -12,6 +12,7 @@
     border-radius: 5px;
     border: 1px solid #cccccc;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
 }
 
 .subjectHeader:hover {
