--- a/src/main/resources/static/css/navigation.css
+++ b/src/main/resources/static/css/navigation.css
@@ -152,3 +152,18 @@
     box-shadow: 0px 3px 3px 1px rgba(0, 0, 0, 0.1);
     transition: all 0.5s;
 }
+
+/*发布按钮*/
+.deployButton {
+    cursor: pointer;
+    width: 100px;
+    padding: 10px;
+    border: none;
+    background-color: #03AA6D;
+    border-radius: 4px;
+}
+
+.deployButton:hover {
+    box-shadow: 0 3px 3px 1px rgba(0, 0, 0, 0.2);
+    background-color: #0b8759;
+}
