--- a/src/main/resources/static/css/subject.css
+++ b/src/main/resources/static/css/subject.css
@@ -24,23 +24,29 @@ td {
     border: 1px dotted green;
     padding: 5px 10px;
 }
-td img{
+
+td img {
     width: 25px;
     height: 25px;
     vertical-align: middle;
 }
+
 td.uploadTd {
     width: 150px;
     padding: 2px 5px;
     cursor: pointer;
 }
+
 td.tdCenter {
     text-align: center;
 }
-td.updateTd:hover{
+
+td.updateTd:hover {
+    cursor: pointer;
     font-style: italic;
     font-weight: bolder;
 }
+
 /*搜索按钮与图标的位置*/
 
 .searchInput {
@@ -58,15 +64,18 @@ td.updateTd:hover{
     background-color: #F2F2F2;
     padding: 10px;
 }
+
 /*上传组件样式*/
 
-.upload-div *{
+.upload-div * {
     box-sizing: border-box;
 }
+
 .upload-div {
     position: relative;
     width: 100%;
 }
+
 .upload-div a {
     z-index: 0;
     width: 60%;
@@ -77,7 +86,8 @@ td.updateTd:hover{
     text-align: center;
     padding: 5px 0;
 }
-.upload-div input{
+
+.upload-div input {
     display: inline-block;
     position: absolute;
     z-index: 1;
@@ -87,14 +97,17 @@ td.updateTd:hover{
     width: 60%;
     height: 100%;
 }
-.upload-div input:hover{
+
+.upload-div input:hover {
     cursor: pointer;
 }
+
 /*表单*/
 .formContainer * {
     box-sizing: border-box;
 }
-.feildErr{/*表单字段错误提示*/
+
+.feildErr { /*表单字段错误提示*/
     font-size: 12px;
     color: #EB2904;
 }
@@ -105,4 +118,19 @@ td.updateTd:hover{
 
 .colValue {
     padding-top: 15px;
+}
+
+/*导航按钮*/
+/*发布按钮*/
+.deployButton {
+    cursor: pointer;
+    width: 120px;
+    padding: 10px;
+    border: none;
+    background-color: #03AA6D;
+    border-radius: 4px;
+}
+
+.deployButton:hover {
+    box-shadow: 0 3px 3px 1px rgba(0, 0, 0, 0.3);
 }
