--- a/src/main/resources/templates/front-template/article.html
+++ b/src/main/resources/templates/front-template/article.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>专题文章</title>
+    <title>单体文章</title>
     <link rel="stylesheet" href="/js/lib/prism/prism.css">
     <script src="/js/lib/prism/prism.js"></script>
     <script src="/js/base.js"></script>
     <link rel="stylesheet" href="/css/base.css"/>
-    <link rel="stylesheet" href="/css/articles.css"/>
+    <link rel="stylesheet" href="/css/article.css"/>
     <link rel="stylesheet" href="/css/devices.css"/>
 
 </head>
@@ -45,7 +45,7 @@
 </div>
 <div class="mainDiv">
     <div class="titleTreeDiv700 titleTreeDiv" id="titleTreeDiv">
-        <p class='subjectTitle' data-sub-dir></p>
+        <p style="margin-left: 10px; font-size:16px">文章列表</p>
         <nav class="titleTree" id="titleTree"></nav>
     </div>
     <div class="contentDiv">
@@ -64,7 +64,7 @@
 </div>
 <script type="text/javascript">
     loadNav();
-    loadSubjectArticleTree();
+    loadSingleArticleTree();
 </script>
 </body>
 
