--- a/src/main/resources/templates/subject.html
+++ b/src/main/resources/templates/subject.html
@@ -19,8 +19,10 @@
     <!-- 功能区域-->
     <div class="functionDiv">
         <div class="searchDiv" id='searchDiv'>
-            <form th:action="@{/subject/find}" th:object="${subject}" method="get" id="searchForm" onsubmit="submitSearch();return false;">
-                <input id="searchInput" name="keyword" th:value="*{keyword}" type="text" class="searchInput" placeholder="输入主题名">
+            <form th:action="@{/subject/find}" th:object="${subject}" method="get" id="searchForm"
+                  onsubmit="submitSearch();return false;">
+                <input id="searchInput" name="keyword" th:value="*{keyword}" type="text" class="searchInput"
+                       placeholder="输入主题名">
                 <input name="pageSize" type="hidden" th:value="*{pageSize}">
             </form>
             <img id='searchButton' class='searchButton' th:src="@{/img/searchicon.png}" src="img/searchicon.png">
@@ -40,6 +42,7 @@
                 <th>图片</th>
                 <th>操作</th>
                 <th>备注</th>
+                <th>是否导航</th>
             </tr>
             <tr th:each="sub , stat:${data.content}" th:data-tr-gen="${sub.id}">
                 <td ondblclick="editSubject(event,1)" th:attr="data-td-id=${sub.id}" class="updateTd">
@@ -47,28 +50,39 @@
                 </td>
                 <td>[[${sub.createdAt}]]</td>
                 <td>[[${sub.articleSum}]]</td>
-                <td ondblclick="editSubject(event,3)" th:attr="data-td-id=${sub.id}" class="updateTd">[[${sub.enName}]]</td>
+                <td ondblclick="editSubject(event,3)" th:attr="data-td-id=${sub.id}" class="updateTd">
+                    [[${sub.enName}]]
+                </td>
                 <td th:attr="data-td-id=${sub.id}" class="uploadTd">
                     <div class="upload-div">
                         <a>上传图片</a>
                         <input type="file" accept="image/*" onchange="changeImg(event)">
-                        <img onmouseover="previewBigImg(this)" onmouseleave="document.getElementById('previewBigImg').style.display='none';" th:unless="${sub.pic eq null}" th:src="${sub.pic}" >
+                        <img onmouseover="previewBigImg(this)"
+                             onmouseleave="document.getElementById('previewBigImg').style.display='none';"
+                             th:unless="${sub.pic eq null}" th:src="${sub.pic}">
                         <span th:if="${sub.pic eq null}">无图片</span>
                     </div>
                 </td>
-                <td>[[${sub.articleSum}]]</td>
                 <td>
                     <a th:href="|/subject/${sub.id}|"><img alt="edit subject"
-                                                                                            th:src="@{/img/edit.svg}"
-                                                                                            title='edit subject'
-                                                                                            
-                                                                                            src="img/edit.svg"></a>
+                                                           th:src="@{/img/edit.svg}"
+                                                           title='edit subject'
+
+                                                           src="img/edit.svg"></a>
                     /
-                    <a href="javascript:void(0);"><img alt="del subject" title='del subject' 
-                                                                th:src="@{/img/delete.svg}" src="img/delete.svg"
-                                                                onclick="delSub(event)"></a>
+                    <a href="javascript:void(0);"><img alt="del subject" title='del subject'
+                                                       th:src="@{/img/delete.svg}" src="img/delete.svg"
+                                                       onclick="delSub(event)"></a>
                 </td>
-                <td ondblclick="editSubject(event,2)" th:attr="data-td-id=${sub.id}" class="updateTd">[[${sub.remark}]]</td>
+                <td ondblclick="editSubject(event,2)" th:attr="data-td-id=${sub.id}" class="updateTd">
+                    [[${sub.remark}]]
+                </td>
+                <td th:attr="data-td-id=${sub.id}">
+                    <th:block th:if="${sub.navigation==true}">
+                        <button class="deployButton" th:onclick="|reDeploySubject(${sub.id})|">重发布</button>
+                    </th:block>
+                    <th:block th:if="${sub.navigation==false}">否</th:block>
+                </td>
             </tr>
         </table>
         <nav th:insert="~{common::page}"></nav>
@@ -131,6 +145,7 @@
 </div>
 <script type="text/javascript" th:inline="javascript">
     let loadUrl = "/subject/find";
+
     //用返回的json数据渲染table
     function renderTable(json) {
         //清除数据区
@@ -138,7 +153,13 @@
         Array.from(table.querySelectorAll("tr[data-tr-gen]")).forEach(tr => tr.remove());
         json.data.content.forEach(trData => {
             let enName = trData.enName || '';
-            let imgPlace = trData.pic?`<img onmouseover="previewBigImg(this)" onmouseleave="document.getElementById('previewBigImg').style.display='none';" src="${trData.pic}" >`:`<span>无图片</span>`;
+            let imgPlace = trData.pic ? `<img onmouseover="previewBigImg(this)" onmouseleave="document.getElementById('previewBigImg').style.display='none';" src="${trData.pic}" >` : `<span>无图片</span>`;
+            let navTdHtml;
+            if (trData.navigation) {
+                navTdHtml = `<button class="deployButton" onclick="reDeploySubject(${trData.id})">重发布</button>`;
+            } else {
+                navTdHtml = '否';
+            }
             let trHtml = `<tr data-tr-gen = ${trData.id}>
                                 <td class="updateTd" ondblclick="editSubject(event,1)" data-td-id="${trData.id}">${trData.subjectTitle}</td>
                                 <td>${trData.createdAt}</td>
@@ -154,12 +175,16 @@
                                 </td>
                                 <td><a href="/subject/${trData.id}"><img alt="edit subject" title='edit subject'  src="/img/edit.svg"></a>/<a href="javascript:void(0);"><img alt="del subject" title='del subject'   src="/img/delete.svg" onclick="delSub(event);"></a></td>
                                 <td class="updateTd" ondblclick="editSubject(event,2)" data-td-id="${trData.id}">${trData.remark}</td>
+                                <td>${navTdHtml}</td>
                                 </tr>
+
                                `;
             table.tBodies[0].insertAdjacentHTML("beforeend", trHtml);
         });
     }
+
     let currentTd = null;
+
     /*双击时编辑Subject*/
     function editSubject(event, type) {
         event.preventDefault();
@@ -172,9 +197,9 @@
         let updated = null;
         //失去焦点时要提示保存
         currentTd.firstElementChild.onblur = function (e) {
-                if(!updated){
-                    update(e);
-                }
+            if (!updated) {
+                update(e);
+            }
         };
         //直接按回车也会保存
         currentTd.firstElementChild.onkeyup = function (e) {
@@ -183,6 +208,7 @@
                 update(e);
             }
         };
+
         function update(e) {
             if (e.target.value !== oldValue) {
                 let save = confirm("保存更新数据?");
@@ -197,7 +223,7 @@
                         //save 备注
                         url = "/subject/updateRemark"
                         formData.set("remark", e.target.value);
-                    }else{
+                    } else {
                         //save 英文名
                         url = "/subject/updateEnName"
                         formData.set("enName", e.target.value);
@@ -213,10 +239,11 @@
             currentTd = null;
         }
     }
+
     function changeImg(event) {
         let formData = new FormData(); //利用formData上传图片
         let tdId = event.target.closest("td[data-td-id]").dataset.tdId;
-        formData.set("id",tdId);
+        formData.set("id", tdId);
         formData.append("picFile", event.target.files[0]);
         fetch("/subject/updatePic", {
             method: 'POST',
@@ -224,38 +251,40 @@
         })
             .then(response => response.json())
             .then(result => {
-                if(result.statusText==='ok'){
-                    if(event.target.nextElementSibling.tagName==='IMG'){
+                if (result.statusText === 'ok') {
+                    if (event.target.nextElementSibling.tagName === 'IMG') {
                         event.target.nextElementSibling.src = result.data.pic;
-                    }else{
+                    } else {
                         event.target.nextElementSibling.remove();
-                        event.target.insertAdjacentHTML("afterend",`<img onmouseover="previewBigImg(this)" onmouseleave="document.getElementById('previewBigImg').style.display='none';" alt="uploadpic" src="${result.data.pic}">`)
+                        event.target.insertAdjacentHTML("afterend", `<img onmouseover="previewBigImg(this)" onmouseleave="document.getElementById('previewBigImg').style.display='none';" alt="uploadpic" src="${result.data.pic}">`)
                     }
-                }else{
-                    alert("修改失败:"+result.msg);
+                } else {
+                    alert("修改失败:" + result.msg);
                 }
             });
     }
-    function previewBigImg(target){
+
+    function previewBigImg(target) {
         let img = document.getElementById("previewBigImg");
         let coords = target.getBoundingClientRect();
-        img.src= target.src;
+        img.src = target.src;
         img.style.display = "block";
-        img.style.top = coords.top-img.offsetWidth+"px";
-        img.style.left = coords.left+target.offsetHeight+"px";
+        img.style.top = coords.top - img.offsetWidth + "px";
+        img.style.left = coords.left + target.offsetHeight + "px";
     }
-    function previewImg(target){
+
+    function previewImg(target) {
         const fileReader = new FileReader();
         fileReader.readAsDataURL(target.files[0]);
-        fileReader.onload = function(e) {
-            if(target.nextElementSibling) target.nextElementSibling.remove();
+        fileReader.onload = function (e) {
+            if (target.nextElementSibling) target.nextElementSibling.remove();
             const img = document.createElement("img");
             img.src = e.target.result;
             img.style.width = '40px';
             img.style.height = '40px';
             img.style.backgroundColor = '#F2F2F2';
             img.style.verticalAlign = "middle";
-            target.insertAdjacentElement("afterend",img);
+            target.insertAdjacentElement("afterend", img);
         }
     }
 
@@ -272,6 +301,7 @@
             }
         });
     }
+
     //编辑---新增主题--------------------
     function addSubject() {
         let subjectForm = document.forms.subjectForm;
@@ -286,8 +316,8 @@
                 modal.style.display = 'none';
                 loadData();
                 //清空隐藏的表单
-                subjectForm.subjectTitle.value="";
-                subjectForm.remark.value="";
+                subjectForm.subjectTitle.value = "";
+                subjectForm.remark.value = "";
                 //需要渲染一下
                 document.getElementById("")
                 document.getElementById("total").value = parseInt(document.getElementById("total").value) + 1;
@@ -299,6 +329,7 @@
             }
         });
     }
+
     ////编辑---删除主题--------------------
     function delSub(e) {
         let tr = e.target.closest('tr');
@@ -313,6 +344,18 @@
                 document.getElementById("total").value = document.getElementById("total").value - 1;
                 renderPageParams();//需要渲染一下
                 tr.remove();
+            }
+        });
+    }
+
+    //重新发布整个导航
+    function reDeploySubject(id) {
+        fetch(`/deploy/reDeploySubject/${id}`, {method: 'POST'}).then(async response => {
+            let result = await response.json();
+            if (result.statusText === 'ok') {
+                alert("发布成功");
+            } else {
+                alert(`发布异常:${result.msg}`);
             }
         });
     }
